# pi2py

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
src/pi2py/: __init__.py  __main__.py  cli.py
src/pi2py/core/: __init__.py  agent.py  litellm_client.py  messages.py  session.py  settings.py  tools.py
tests/: test_agent.py  test_cli.py  test_litellm_client.py  test_messages.py  test_settings.py  test_tools.py
